  * This has now being reinstated subject to not having multiple MacOS instances in any single APFS container
- Fixes Misc Items
  * Always block UEFI Windows NVRAM items (Disregard Volatility)
  * Misidentification of certain volume types as HFS+ volumes
  * Excessive pointer event logging
  * Misplaced `Out` and `Return` log tags
  * Python Script Code Smells
- Improves Time Bound Primed Buffer Mitigation
  * Reduces intervention threshold based on detection of confirmed user key presses


0.13.3.AA (06 Jun 2022):
-----------------------
- Synced with Upstream v0.13.3
- Adds `EnableMacosFilter` Feature
  * This feature is active by default and activates the `ProtectNVRAM` feature, if enabled, on MacOS boots
  * The `ProtectNVRAM` feature, if enabled, is activated for other applicable OS types regardless
  * The `EnableMacosFilter` feature can be disabled using a new `decline_macos_filter` configuration token
- Adds `DisableNvramPanicLog` Feature
  * Sets a MacOS `nvram_paniclog=0` boot argument to disable kernel panic logging to NVRAM
  * Replaces the `PanicFilter` feature which has been removed
- Adds `NvramVariableLimit` Feature
  * Filters NVRAM variable write attempts
  * Variables larger than a specified size are discarded
  * This is activated by a new `nvram_variable_limit` configuration token
- Adds `DecoupleKeyF10` Feature
  * Unlinks the `F10` key from the built in screenshot feature
  * Allows the use of 3rd party screenshot tools that also map the `F10` key
  * The `\` (forward slash) key remains linked to the built in screenshot feature
  * This is activated by a new `decouple_key_f10` configuration token
- Fixes `DisableAMFI` Feature
  * The feature had been disabled under some circumstances
  * This bug was introduced in v0.13.2.AP (Commit 8705fdb)
- Improves `HandleSignedInt` Function
  * Ensures the function always returns a negative value when required
- Improves `FindMenuShortcutEntry` Function